--- a/package.json
+++ b/package.json
@@ -11,10 +11,17 @@
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
+		"@typescript-eslint/eslint-plugin": "^5.58.0",
 		"autoprefixer": "^10.4.14",
+		"eslint": "^8.38.0",
+		"eslint-config-standard-with-typescript": "^34.0.1",
+		"eslint-plugin-import": "^2.27.5",
+		"eslint-plugin-n": "^15.7.0",
+		"eslint-plugin-promise": "^6.1.1",
 		"postcss": "^8.4.21",
 		"prettier": "^2.8.7",
 		"prettier-plugin-tailwindcss": "^0.2.7",
-		"tailwindcss": "^3.3.1"
+		"tailwindcss": "^3.3.1",
+		"typescript": "^5.0.4"
 	}
 }
