--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
 		"@typescript-eslint/eslint-plugin": "^5.58.0",
 		"autoprefixer": "^10.4.14",
 		"eslint": "^8.38.0",
+		"eslint-config-prettier": "^8.8.0",
 		"eslint-config-standard-with-typescript": "^34.0.1",
 		"eslint-plugin-import": "^2.27.5",
 		"eslint-plugin-n": "^15.7.0",
+		"eslint-plugin-prettier": "^4.2.1",
 		"eslint-plugin-promise": "^6.1.1",
 		"postcss": "^8.4.21",
 		"prettier": "^2.8.7",
