--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 	"main": "index.js",
 	"scripts": {
 		"build": "npx tailwindcss -i ./tailwind_import.css -o ./html/assets/tailwind.css",
-		"watch": "npx tailwindcss -i ./tailwind_import.css -o ./html/assets/tailwind.css --watch"
+		"watch": "npx tailwindcss -i ./tailwind_import.css -o ./html/assets/tailwind.css --watch",
+		"fmt": "prettier --write ./html/**/*.{js,json,css,html}"
 	},
 	"keywords": [],
 	"author": "",
